--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
 <%-include('header')-%>
+<h5>registeruser!</h5><br>
 <form id="reg_form">
   <label for="username">name</label>
   <input type="text" placeholder="username" id="username" /><br />
@@ -26,7 +27,7 @@
     }).then((res) => res.json());
 
     if (result.status === "ok") {
-      window.location.assign("/dash");
+      window.location.assign("/login");
     } else {
       alert(result.error);
     }
