headig details changed

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <%-include('header')-%>
-<h5>registeruser!</h5><br>
+<h5>registeruser!</h5>
 <form id="reg_form">
   <label for="username">name</label>
   <input type="text" placeholder="username" id="username" /><br />
