--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,11 +5,11 @@
   <input type="text" placeholder="username" id="username" /><br />
   <label for="password">Password</label>
   <input type="password" placeholder="password" id="password" /><br />
-  <input type="submit" value="submit">
+  <input type="submit" value="submit" />
 </form>
 <script>
-  const form=document.getElementById("login_form")
-  form.addEventListener("submit",loginuser)
+  const form = document.getElementById("login_form");
+  form.addEventListener("submit", loginuser);
 
   async function loginuser(event) {
     event.preventDefault();
@@ -28,8 +28,8 @@
     }).then((res) => res.json());
 
     if (result.status === "ok") {
-      window.location.assign("/dash");}
-    else alert(result.error);
+      window.location.assign("/dash");
+    } else alert(result.error);
   }
 </script>
 <%-include('footer')-%>
