--- a/views/newblog.ejs
+++ b/views/newblog.ejs
@@ -3,6 +3,7 @@
 <h3>Create new blog</h3>
 <hr />
 <br />
+
 <form id="new_blog">
   <textarea
     id="title"
@@ -12,41 +13,40 @@
   ></textarea
   ><br />
   <br />
-  <br />
+
   <textarea
     id="review"
     placeholder="post your review about that book"
     rows="10"
     cols="75"
-  ></textarea
-  ><br />
+  ></textarea>
   <br />
   <br />
-  <input type="submit" value="Save" />
+
+  <input type="submit" value="submit" />
 </form>
 <script>
-  const form=document.getElementById('new_blog')
-  form.addEventListener('submit',newpost)
-    async function newpost(event){
-        event.preventdefault();
-     
-        const title=document.getElementById("title").value
-        const review=document.getElementById("review").value
-        
-        const result=await fetch('/dash',{
-            method:"POST",
-            headers:{
-                "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-                title,
-                review,
-            }),
-        }).then((res)=>res.json());
-        if(result.status===error)
-        {
-          alert(result.error);
-        }
-    }
+  const form = document.getElementById("new_blog");
+  form.addEventListener("submit", newpost);
+  async function newpost(event) {
+    event.preventDefault();
+
+    const title = document.getElementById("title").value;
+    const review = document.getElementById("review").value;
+
+    const result = await fetch("/api/dash", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({
+        title,
+        review,
+      }),
+    }).then((res) => res.json());
+
+    if (result.status === "ok") window.location.assign("/dash");
+    else alert(result.error);
+  }
 </script>
 <%-include('footer')-%>
