--- a/views/home.ejs
+++ b/views/home.ejs
@@ -27,7 +27,7 @@
 
         <tr>
           <td>
-            <button type=" button" onclick="update('<%=data[i]._id %>')">Update</button>
+            <button type=" button" onclick="updatee('<%=data[i]._id %>')">Update</button>
             <button type="button" onclick="remove('<%=data[i]._id %>')">Delete</button>
 
           </td>
@@ -41,8 +41,8 @@
               window.location.assign("/newblog");
             }
 
-           function update(id){
-             window.location.assign('/updatepost/'+id)
+           function updatee(id){
+             window.location.assign("/updatepost/"+id)
            }
            async function remove(id) {
               console.log('called')
